add comment to index.htm

--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <title>Netflix - Watch Movies Online, Watch TV Shows Online</title>
   </head>
+  <!--hiiii-->
   <body>
     <header class="showcase">
       <div class="showcase-top">
